[gd_scene load_steps=11 format=3 uid="uid://1g5lwin6snkl"]

[ext_resource type="Script" path="res://scenes/characters/player/Player.gd" id="1_orus5"]
[ext_resource type="Texture2D" uid="uid://d06f6m5lutv5u" path="res://art/playerGrey_up1.png" id="2_pb6vo"]
[ext_resource type="Texture2D" uid="uid://c6b2cfmwqun0w" path="res://art/playerGrey_up2.png" id="3_ek8er"]
[ext_resource type="Texture2D" uid="uid://dopi02fe8johk" path="res://art/playerGrey_walk1.png" id="4_xbqqx"]
[ext_resource type="Texture2D" uid="uid://hfnbh2rxml37" path="res://art/playerGrey_walk2.png" id="5_tbgbk"]
[ext_resource type="AudioStream" uid="uid://cpt8tlkn1td3g" path="res://art/threeTone1.ogg" id="6_ka78v"]
[ext_resource type="PackedScene" uid="uid://cy2qonyfhlg44" path="res://scenes/guns/Gun.tscn" id="7_jto2s"]
[ext_resource type="PackedScene" uid="uid://bo5ww3nc8b0fr" path="res://scenes/stats/Health.tscn" id="8_urmak"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xlghv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_pb6vo")
}, {
"duration": 1.0,
"texture": ExtResource("3_ek8er")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_xbqqx")
}, {
"duration": 1.0,
"texture": ExtResource("5_tbgbk")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f1tjg"]
radius = 25.0
height = 50.0

[node name="Player" type="Area2D"]
collision_layer = 2
collision_mask = 20
script = ExtResource("1_orus5")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_xlghv")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_f1tjg")

[node name="PickupCollectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ka78v")

[node name="Gun" parent="." instance=ExtResource("7_jto2s")]

[node name="Health" parent="." instance=ExtResource("8_urmak")]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
